src/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package parser;
import ast.*;
import java.util.ArrayList;

@SuppressWarnings({ "unused"})
public class Parser implements ParserConstants {
        public Programa gerarAST() throws ParseException
        {
                return this.PROGRAMA();
        }

  final public Programa PROGRAMA() throws ParseException {var nos = new ArrayList<No>(); No no;
    jj_consume_token(BEGIN_PROGRAM);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PAREN_ABRE:
      case PONTO_VIRG:
      case NEGACAO:
      case MENOS:
      case MAIS:
      case EXIBE:
      case TRUE:
      case FALSE:
      case WHILE:
      case FOR:
      case IF:
      case STRING:
      case CHAR:
      case ID:
      case LITERAL_FLOAT:
      case LITERAL_INT:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2)) {
        no = CMD_DECL_VARIAVEL();
nos.add(no);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PAREN_ABRE:
        case NEGACAO:
        case MENOS:
        case MAIS:
        case TRUE:
        case FALSE:
        case STRING:
        case CHAR:
        case ID:
        case LITERAL_FLOAT:
        case LITERAL_INT:{
          no = EXPR();
          jj_consume_token(PONTO_VIRG);
nos.add(no);
          break;
          }
        case EXIBE:{
          no = CMD_EXIBE();
nos.add(no);
          break;
          }
        case FOR:{
          no = CMD_FOR();
nos.add(no);
          break;
          }
        case WHILE:{
          no = CMD_WHILE();
nos.add(no);
          break;
          }
        case IF:{
          no = CMD_IF();
nos.add(no);
          break;
          }
        case PONTO_VIRG:{
          jj_consume_token(PONTO_VIRG);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(END_PROGRAM);
    jj_consume_token(0);
{if ("" != null) return new Programa(nos);}
    throw new Error("Missing return statement in function");
  }

  final public Bloco BLOCO() throws ParseException {var nos = new ArrayList<No>(); No no;
    jj_consume_token(CHAVE_ABRE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PAREN_ABRE:
      case PONTO_VIRG:
      case NEGACAO:
      case MENOS:
      case MAIS:
      case EXIBE:
      case TRUE:
      case FALSE:
      case WHILE:
      case FOR:
      case IF:
      case STRING:
      case CHAR:
      case ID:
      case LITERAL_FLOAT:
      case LITERAL_INT:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      if (jj_2_2(2)) {
        no = CMD_DECL_VARIAVEL();
nos.add(no);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PAREN_ABRE:
        case NEGACAO:
        case MENOS:
        case MAIS:
        case TRUE:
        case FALSE:
        case STRING:
        case CHAR:
        case ID:
        case LITERAL_FLOAT:
        case LITERAL_INT:{
          no = EXPR();
          jj_consume_token(PONTO_VIRG);
nos.add(no);
          break;
          }
        case EXIBE:{
          no = CMD_EXIBE();
nos.add(no);
          break;
          }
        case FOR:{
          no = CMD_FOR();
nos.add(no);
          break;
          }
        case WHILE:{
          no = CMD_WHILE();
nos.add(no);
          break;
          }
        case IF:{
          no = CMD_IF();
nos.add(no);
          break;
          }
        case PONTO_VIRG:{
          jj_consume_token(PONTO_VIRG);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(CHAVE_FECHA);
{if ("" != null) return new Bloco(nos);}
    throw new Error("Missing return statement in function");
  }

  final public CmdDeclVariavel CMD_DECL_VARIAVEL() throws ParseException {Id tipo, nome; Expr valor = null;
    tipo = IDENT();
    nome = IDENT();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIB:{
      jj_consume_token(ATRIB);
      valor = EXPR();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_VIRG);
{if ("" != null) return new CmdDeclVariavel(tipo, nome, valor);}
    throw new Error("Missing return statement in function");
  }

  final public CmdFor CMD_FOR() throws ParseException {Id varInit; Expr exprInit, exprTeste, exprIter; Bloco bloco; Token tokFor;
    tokFor = jj_consume_token(FOR);
    jj_consume_token(PAREN_ABRE);
    varInit = IDENT();
    jj_consume_token(ATRIB);
    exprInit = EXPR();
    jj_consume_token(PONTO_VIRG);
    exprTeste = EXPR();
    jj_consume_token(PONTO_VIRG);
    exprIter = EXPR();
    jj_consume_token(PAREN_FECHA);
    bloco = BLOCO();
{if ("" != null) return new CmdFor(varInit, exprInit, exprTeste, exprIter, bloco, tokFor);}
    throw new Error("Missing return statement in function");
  }

  final public CmdExibe CMD_EXIBE() throws ParseException {Expr expr; Token tokExibe;
    tokExibe = jj_consume_token(EXIBE);
    expr = EXPR();
    jj_consume_token(PONTO_VIRG);
{if ("" != null) return new CmdExibe(expr, tokExibe);}
    throw new Error("Missing return statement in function");
  }

  final public CmdWhile CMD_WHILE() throws ParseException {Expr cond; Bloco bloco; Token tokWhile;
    tokWhile = jj_consume_token(WHILE);
    jj_consume_token(PAREN_ABRE);
    cond = EXPR();
    jj_consume_token(PAREN_FECHA);
    jj_consume_token(DO);
    bloco = BLOCO();
{if ("" != null) return new CmdWhile(cond, bloco, tokWhile);}
    throw new Error("Missing return statement in function");
  }

  final public CmdIf CMD_IF() throws ParseException {Expr cond; Bloco blocoEntao, blocoSenao = null; CmdIf cmdSenao; Token tokIf;
    tokIf = jj_consume_token(IF);
    jj_consume_token(PAREN_ABRE);
    cond = EXPR();
    jj_consume_token(PAREN_FECHA);
    jj_consume_token(THEN);
    blocoEntao = BLOCO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:{
        cmdSenao = CMD_IF();
blocoSenao = new Bloco(cmdSenao);
        break;
        }
      case CHAVE_ABRE:{
        blocoSenao = BLOCO();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
{if ("" != null) return new CmdIf(cond, blocoEntao, blocoSenao, tokIf);}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR() throws ParseException {Expr expr;
    expr = EXPR_ATRIBUICAO();
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_ATRIBUICAO() throws ParseException {Id dest; Expr valor, expr;
    if (jj_2_3(2)) {
      dest = IDENT();
      jj_consume_token(ATRIB);
      valor = EXPR_ATRIBUICAO();
{if ("" != null) return new ExprAtribuicao(dest, valor);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PAREN_ABRE:
      case NEGACAO:
      case MENOS:
      case MAIS:
      case TRUE:
      case FALSE:
      case STRING:
      case CHAR:
      case ID:
      case LITERAL_FLOAT:
      case LITERAL_INT:{
        expr = EXPR_TERNARIA();
{if ("" != null) return expr;}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_TERNARIA() throws ParseException {Expr cond, esq, dir;
    cond = EXPR_LOGICO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTERROG:{
      jj_consume_token(INTERROG);
      esq = EXPR_TERNARIA();
      jj_consume_token(DOIS_PONTOS);
      dir = EXPR_TERNARIA();
cond = new ExprTernaria(cond, esq, dir);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
{if ("" != null) return cond;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_LOGICO() throws ParseException {Expr esq, dir; Token tokOp;
    esq = EXPR_IGUAL();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        tokOp = jj_consume_token(OR);
        dir = EXPR_IGUAL();
esq = new ExprBinaria(esq, dir, Operador.Ou, tokOp);
        break;
        }
      case AND:{
        tokOp = jj_consume_token(AND);
        dir = EXPR_IGUAL();
esq = new ExprBinaria(esq, dir, Operador.E, tokOp);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return esq;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_IGUAL() throws ParseException {Expr esq, dir; Token tokOp;
    esq = EXPR_RELACIONAL();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:
      case DIFERENTE:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        tokOp = jj_consume_token(IGUAL);
        dir = EXPR_RELACIONAL();
esq = new ExprBinaria(esq, dir, Operador.Igual, tokOp);
        break;
        }
      case DIFERENTE:{
        tokOp = jj_consume_token(DIFERENTE);
        dir = EXPR_RELACIONAL();
esq = new ExprBinaria(esq, dir, Operador.Dif, tokOp);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return esq;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_RELACIONAL() throws ParseException {Expr esq, dir; Token tokOp;
    esq = EXPR_ADICAO();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MENOR:
      case MENOR_IGUAL:
      case MAIOR:
      case MAIOR_IGUAL:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIOR:{
        tokOp = jj_consume_token(MAIOR);
        dir = EXPR_ADICAO();
esq = new ExprBinaria(esq, dir, Operador.Maior, tokOp);
        break;
        }
      case MAIOR_IGUAL:{
        tokOp = jj_consume_token(MAIOR_IGUAL);
        dir = EXPR_ADICAO();
esq = new ExprBinaria(esq, dir, Operador.MaiorIg, tokOp);
        break;
        }
      case MENOR:{
        tokOp = jj_consume_token(MENOR);
        dir = EXPR_ADICAO();
esq = new ExprBinaria(esq, dir, Operador.Menor, tokOp);
        break;
        }
      case MENOR_IGUAL:{
        tokOp = jj_consume_token(MENOR_IGUAL);
        dir = EXPR_ADICAO();
esq = new ExprBinaria(esq, dir, Operador.MenorIg, tokOp);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return esq;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_ADICAO() throws ParseException {Expr esq, dir; Token tokOp;
    esq = EXPR_MULT();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MENOS:
      case MAIS:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:{
        tokOp = jj_consume_token(MAIS);
        dir = EXPR_MULT();
esq = new ExprBinaria(esq, dir, Operador.Mais, tokOp);
        break;
        }
      case MENOS:{
        tokOp = jj_consume_token(MENOS);
        dir = EXPR_MULT();
esq = new ExprBinaria(esq, dir, Operador.Menos, tokOp);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return esq;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_MULT() throws ParseException {Expr esq, dir; Token tokOp;
    esq = EXPR_PREFIXO();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BARRA:
      case ASTERISCO:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASTERISCO:{
        tokOp = jj_consume_token(ASTERISCO);
        dir = EXPR_PREFIXO();
esq = new ExprBinaria(esq, dir, Operador.Mul, tokOp);
        break;
        }
      case BARRA:{
        tokOp = jj_consume_token(BARRA);
        dir = EXPR_PREFIXO();
esq = new ExprBinaria(esq, dir, Operador.Div, tokOp);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return esq;}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_PREFIXO() throws ParseException {Expr expr; Token tokOp;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MENOS:{
      tokOp = jj_consume_token(MENOS);
      expr = FATOR();
{if ("" != null) return new ExprUnaria(expr, Operador.Menos, tokOp);}
      break;
      }
    case NEGACAO:{
      tokOp = jj_consume_token(NEGACAO);
      expr = FATOR();
{if ("" != null) return new ExprUnaria(expr, Operador.Nao, tokOp);}
      break;
      }
    case MAIS:{
      tokOp = jj_consume_token(MAIS);
      expr = FATOR();
{if ("" != null) return expr;}
      break;
      }
    case PAREN_ABRE:
    case TRUE:
    case FALSE:
    case STRING:
    case CHAR:
    case ID:
    case LITERAL_FLOAT:
    case LITERAL_INT:{
      expr = EXPR_POSFIXO();
{if ("" != null) return expr;}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_POSFIXO() throws ParseException {Expr expr; Token tokOp;
    expr = FATOR();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INCREMENTO:
      case DECREMENTO:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INCREMENTO:{
        tokOp = jj_consume_token(INCREMENTO);
expr = new ExprUnaria(expr, Operador.IncPos, tokOp);
        break;
        }
      case DECREMENTO:{
        tokOp = jj_consume_token(DECREMENTO);
expr = new ExprUnaria(expr, Operador.DecPos, tokOp);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public Expr FATOR() throws ParseException {Expr expr; Token tok;
    if (jj_2_4(2)) {
      expr = EXPR_FUNC();
{if ("" != null) return expr;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        expr = EXPR_ID();
{if ("" != null) return expr;}
        break;
        }
      case LITERAL_FLOAT:{
        tok = jj_consume_token(LITERAL_FLOAT);
{if ("" != null) return new ExprFloat(tok);}
        break;
        }
      case LITERAL_INT:{
        tok = jj_consume_token(LITERAL_INT);
{if ("" != null) return new ExprInteiro(tok);}
        break;
        }
      case STRING:{
        tok = jj_consume_token(STRING);
{if ("" != null) return new ExprString(tok);}
        break;
        }
      case CHAR:{
        tok = jj_consume_token(CHAR);
{if ("" != null) return new ExprChar(tok);}
        break;
        }
      case TRUE:{
        tok = jj_consume_token(TRUE);
{if ("" != null) return new ExprBool(true, tok);}
        break;
        }
      case FALSE:{
        tok = jj_consume_token(FALSE);
{if ("" != null) return new ExprBool(false, tok);}
        break;
        }
      case PAREN_ABRE:{
        jj_consume_token(PAREN_ABRE);
        expr = EXPR();
        jj_consume_token(PAREN_FECHA);
{if ("" != null) return expr;}
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public ExprId EXPR_ID() throws ParseException {Token tok;
    tok = jj_consume_token(ID);
{if ("" != null) return new ExprId(tok);}
    throw new Error("Missing return statement in function");
  }

  final public Id IDENT() throws ParseException {Token tok;
    tok = jj_consume_token(ID);
{if ("" != null) return new Id(tok);}
    throw new Error("Missing return statement in function");
  }

  final public Expr EXPR_FUNC() throws ParseException {Id nome; var args = new ArrayList<Expr>(); Expr arg;
    nome = IDENT();
    jj_consume_token(PAREN_ABRE);
    arg = EXPR();
args.add(arg);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VIRGULA:{
      jj_consume_token(VIRGULA);
      arg = EXPR();
args.add(arg);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(PAREN_FECHA);
{if ("" != null) return new ExprFunc(nome, args);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_3_2()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_10()) return true;
    if (jj_scan_token(ATRIB)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3R_11()
 {
    if (jj_3R_10()) return true;
    if (jj_scan_token(PAREN_ABRE)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_9()
 {
    if (jj_3R_10()) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_10()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[24];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xe0c04900,0xe0c04900,0xe0c04900,0xe0c04900,0x1000000,0x40,0x0,0xc0c04100,0x200,0x18000000,0x18000000,0x3000,0x3000,0x78000,0x78000,0xc00000,0xc00000,0x180000,0x180000,0xc0c04100,0x6000000,0x6000000,0xc0000100,0x200000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x1f15,0x1f15,0x1f15,0x1f15,0x0,0x10,0x20,0x1f00,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1f00,0x0,0x0,0x1f00,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[4];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 24; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
